--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,6 +26,12 @@ jobs:
   fleet-gitops:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Make script executable
+        uses: chmod +x ./gitops.sh
+
       - name: Checkout GitOps repository
         uses: actions/checkout@v4
 
