Add script executable line

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,6 +26,9 @@ jobs:
   fleet-gitops:
     runs-on: ubuntu-latest
     steps:
+      - name: Create script executable
+        run: chmod +x gitops.sh
+
       - name: Checkout GitOps repository
         uses: actions/checkout@v4
 
