--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,11 +26,11 @@ jobs:
   fleet-gitops:
     runs-on: ubuntu-latest
     steps:
-      - name: Create script executable
-        run: chmod +x ./gitops.sh
-
       - name: Checkout GitOps repository
         uses: actions/checkout@v4
+
+      - name: Create script executable
+        run: chmod +x gitops.sh
 
       - name: Apply latest configuration to Fleet
         uses: ./.github/gitops-action
@@ -45,5 +45,5 @@ jobs:
           FLEET_GLOBAL_ENROLL_SECRET: ${{ secrets.FLEET_GLOBAL_ENROLL_SECRET }}
           FLEET_WORKSTATIONS_ENROLL_SECRET: ${{ secrets.FLEET_WORKSTATIONS_ENROLL_SECRET }}
           FLEET_WORKSTATIONS_CANARY_ENROLL_SECRET: ${{ secrets.FLEET_WORKSTATIONS_CANARY_ENROLL_SECRET }}
-          FLEET_ENGINEERING_ENROLL_SECRET: ${{ secrets.FLEET_ENGINEERING_ENROLL_SECRET}}
-          FLEET_NEW_HIRES_ENROLL_SECRET: ${{ secrets.FLEET_NEW_HIRES_ENROLL_SECRET}}
+          FLEET_ENGINEERING_ENROLL_SECRET: ${{ secrets.FLEET_ENGINEERING_ENROLL_SECRET }}
+          FLEET_NEW_HIRES_ENROLL_SECRET: ${{ secrets.FLEET_NEW_HIRES_ENROLL_SECRET }}
