--- a/default.yml
+++ b/default.yml
@@ -14,7 +14,7 @@ org_settings:
   fleet_desktop:
     transparency_url: https://catoftheday.com
   host_expiry_settings:
-    enable: true
+    host_expiry_enabled: true
     host_expiry_window: 30
   org_info:
     org_name: Katsu's Cat Cafe
